# deepLearningPython

./: README.md  chapter2.ipynb  pyproject.toml
